--- a/Haikyuu.html
+++ b/Haikyuu.html
@@ -38,7 +38,7 @@
 
     <div class="container-scrollbar">
         <select class="btn" id="video-selector">
-            <option class="btn" value="Haikyuu/Episode 1.mp4">Episode 1</option>
+            <option class="btn" value="https://mega.nz/embed/hKEizTxK#Xt2KlDdXvVZzQdNLFjp62CIUpKBWE4tM8Gj15hUZYnY">Episode 1</option>
             <option class="btn" value="Haikyuu/Episode 2.mp4">Episode 2</option>
             <option class="btn" value="Haikyuu/Episode 3.mp4">Episode 3</option>
             <option class="btn" value="Haikyuu/Episode 4.mp4">Episode 4</option>
@@ -51,12 +51,10 @@
             <!-- Add more video options as needed -->
         </select>
     </div>
-        
-    <div class="video-container container">
-        <video id="video" controls>
-            <!-- Default video source -->
-            <source src="vid/Haikyuu/Episode 1.mp4" type="video/mp4">
-        </video>
+
+    <div class="center video-selector">
+        <iframe id="video" width="640" height="360" frameborder="0"
+            src="https://mega.nz/embed/hKEizTxK#Xt2KlDdXvVZzQdNLFjp62CIUpKBWE4tM8Gj15hUZYnY" allowfullscreen></iframe>
     </div>
 
     <script>
@@ -65,7 +63,7 @@
 
         videoSelector.addEventListener('change', () => {
             const selectedVideo = videoSelector.value;
-            video.src = `vid/${selectedVideo}`;
+            video.src = `${selectedVideo}`;
         });
     </script>
 
