--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
-                    <div class="box" style="background: url(img/anime-img-1.jpg) no-repeat;"></div>
+                    <div class="box" style="background: url(img/Animes/Beastars.jpg) no-repeat;"></div>
                     <div class="content">
                         <h3>Beastars</h3>
-                        <p>Guided by the spirit demon within him, orphaned Naruto learns
-                            to harness his powers as a ninja in this anime adventure series.</p>
-                        <a href="#" class="btn">Regarder</a>
+                        <p>Dans un monde où coexistent des bêtes de toutes sortes,
+                        un doux loup s'éveille à ses propres pulsions prédatrices alors
+                        que son école est confrontée à un meurtre en son sein.</p>
+                        <a href="beastars.html" class="btn">Regarder</a>
                     </div>
                 </div>
 
