--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <div class="swiper-slide">
                     <div class="box" style="background: url(img/anime-img-2.jpg) no-repeat;"></div>
                     <div class="content">
-                        <h3>One-Punch Man</h3>
-                        <p>Guided by the spirit demon within him, orphaned Naruto learns
-                            to harness his powers as a ninja in this anime adventure series.</p>
-                        <a href="#" class="btn">Regarder</a>
+                        <h3>Demon Slayer</h3>
+                        <p>Tanjiro se lance dans un périlleux voyage pour venger
+                        sa famille massacrée par un démon et délivrer sa sœur d'un mauvais sort.</p>
+                        <a href="demonslayer.html" class="btn">Regarder</a>
                     </div>
                 </div>
 
