--- a/demonslayer.html
+++ b/demonslayer.html
@@ -38,6 +38,7 @@
 
     <div class="container-scrollbar">
         <select class="btn" id="video-selector">
+            <option class="btn" value="#">Saison 2</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667143&share=1">Episode 1</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667145&share=1">Episode 2</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667146&share=1">Episode 3</option>
