--- a/demonslayer.html
+++ b/demonslayer.html
@@ -25,9 +25,6 @@
         <nav class="navbar">
             <a class="active" href="index.html">home</a>
             <a href="#anime">anime</a>
-            <a href="#action">action</a>
-            <a href="#child">child</a>
-            <a href="#family">family</a>
         </nav>
         <div class="icons">
             <i class="fas fa-bars" id="menu-bars"></i>
@@ -38,7 +35,7 @@
 
     <div class="container-scrollbar">
         <select class="btn" id="video-selector">
-            <option class="btn" value="#">Saison 2</option>
+            <option class="btn" value="">Saison 2</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667143&share=1">Episode 1</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667145&share=1">Episode 2</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667146&share=1">Episode 3</option>
@@ -50,6 +47,19 @@
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667157&share=1">Episode 9</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667164&share=1">Episode 10</option>
             <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=4667165&share=1">Episode 11</option>
+            <option class="btn" value="">Saison 3</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5123652&share=1">Episode 1</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5129278&share=1">Episode 2</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5139733&share=1">Episode 3</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5148655&share=1">Episode 4</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5155200&share=1">Episode 5</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5162155&share=1">Episode 6</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5168755&share=1">Episode 7</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5175891&share=1">Episode 8</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5181163&share=1">Episode 9</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5186530&share=1">Episode 10</option>
+            <option class="btn" value="https://video.sibnet.ru/shell.php?videoid=5193486&share=1">Episode 11</option>
+
             <!-- Add more video options as needed -->
         </select>
     </div>
@@ -68,9 +78,3 @@
             video.src = `${selectedVideo}`;
         });
     </script>
-
-
-    <div class="copyright container">
-        <a href="#" class="logo"><i class="fas fa-infinity"></i>Anime.</a>
-        <p>&#169; Dailywebdesign. All rights reserved.</p>
-    </div>
