--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <h3>Haikyu!!</h3>
                         <p>Shôyô est un joueur de volley-ball de petite taille. Malgré ce handicap, celui-ci arrive à rivaliser contre ses
                         adversaires grâce à une incroyable détente.</p>
-                        <a href="Haikyuu.html" class="btn">Regarder</a>
+                        <a href="#" class="btn">Regarder</a>
                     </div>
                 </div>
 
@@ -194,7 +194,7 @@
                         <h3>Tokyo Revengers</h3>
                         <p>Guided by the spirit demon within him, orphaned Naruto learns
                             to harness his powers as a ninja in this anime adventure series.</p>
-                        <a href="#" class="btn">Regarder</a>
+                        <a href="tokyorevenger.html" class="btn">Regarder</a>
                     </div>
                 </div>
 
